syntax = "proto3";
option java_multiple_files = true;
package product;
option java_package = "org.retrade.proto.product";
option java_outer_classname = "ProductServiceProto";

message ProductInfo {
  string id = 1;
  string name = 2;
  string seller_id = 3;
  string seller_shop_name = 4;
  string short_description = 5;
  string description = 6;
  string thumbnail = 7;
  repeated string product_images = 8;
  string brand = 9;
  string discount = 10;
  string model = 11;
  double current_price = 12;
  repeated string categories = 13;
  repeated string keywords = 14;
  repeated string tags = 15;
  bool verified = 16;
  string created_at = 17;
  string updated_at = 18;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  bool success = 1;
  string message = 2;
  ProductInfo product = 3;
}

message GetProductsRequest {
  repeated string product_ids = 1;
}

message GetProductsResponse {
  bool success = 1;
  string message = 2;
  repeated ProductInfo products = 3;
}

message GetProductsByCategoryRequest {
  string category = 1;
  int32 page = 2;
  int32 size = 3;
}

message GetProductsByCategoryResponse {
  bool success = 1;
  string message = 2;
  repeated ProductInfo products = 3;
  int32 total_pages = 4;
  int64 total_elements = 5;
}

message GetProductsBySellerRequest {
  string seller_id = 1;
  int32 page = 2;
  int32 size = 3;
}

message GetProductsBySellerResponse {
  bool success = 1;
  string message = 2;
  repeated ProductInfo products = 3;
  int32 total_pages = 4;
  int64 total_elements = 5;
}

message ValidateProductsRequest {
  repeated string product_ids = 1;
}

message ValidateProductsResponse {
  bool success = 1;
  string message = 2;
  repeated string valid_product_ids = 3;
  repeated string invalid_product_ids = 4;
}

service GrpcProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc GetProductsByCategory(GetProductsByCategoryRequest) returns (GetProductsByCategoryResponse);
  rpc GetProductsBySeller(GetProductsBySellerRequest) returns (GetProductsBySellerResponse);
  rpc ValidateProducts(ValidateProductsRequest) returns (ValidateProductsResponse);
}
